force-app/main/default/objects/CommunicationTrigger__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DynamicFields__c</fullName>
        <label>Dynamic Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailTemplateName__c</fullName>
        <label>Email Template Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerName__c</fullName>
        <label>Trigger Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerType__c</fullName>
        <label>Trigger Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Communication Trigger</label>
    <pluralLabel>Communication Triggers</pluralLabel>
</CustomObject>